--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,8 +41,8 @@ stages: # step 1
         #name: Default
       steps:
         - script: |
-            set -e 
-
+            set -e
+            terraform destroy -input=false
             terraform init -input=false
             terraform apply -input=false -auto-approve
           name: 'RunTerraform'
