--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,8 +6,8 @@ on:
       - master
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
+  AWS_REGION: us-west-2                   # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: Grupo02           # set this to your Amazon ECR repository name
 
 jobs:
   deploy:
