--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: us-west-2                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: Grupo02           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: grupo02           # set this to your Amazon ECR repository name
 
 jobs:
   deploy:
